Update Env Example

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=redis
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -25,7 +25,7 @@ REDIS_PORT=6379
 
 FACEBOOK_CLIENT_ID=343549169518077
 FACEBOOK_CLIENT_SECRET=fc5d43df8cab3011ada45bc7d98bc5e2
-FACEBOOK_CLIENT_REDIRECT=http://review-sucker.wip/login/facebook/callback
+FACEBOOK_CLIENT_REDIRECT=https://review-sucker.wip/login/facebook/callback
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
