Support Tagging for Reviews & Analysis Page - Add Tags Package by Spatie - Add Sentry Package

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ DB_DATABASE=sucker
 DB_USERNAME=bagaskara
 DB_PASSWORD=bagaskara
 
+SENTRY_LARAVEL_DSN=public_token
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
