--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/horizon": "^1.3",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "sentry/sentry-laravel": "^0.10.0",
+        "spatie/laravel-tags": "^2.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
